Module filter 7.x-2.x, 2012-11-27
---------------------------------
by greenSkin: Added functionality to show recently enabled/disabled modules.
#1710230 by littlekoala, greenSkin: Fixed On | Off buttons does not change
  state with jquery_update() module active.


Module Filter 7.x-2.x, 2012-11-26
---------------------------------
by greenSkin: Added description to filter textfield on permissions page.


Module Filter 7.x-2.x, 2012-11-04
---------------------------------
by greenSkin: Added filter to user permissions page.
by greenSkin: Fixed styling when JavaScript is disabled.
by greenSkin: Fixed compatiblility with page_actions.
#1351184 klonos, greenSkin: Added support for update_advanced "Ignored from
  settings".
#1149978 by good_man, greenSkin: Added RTL Styling for tabs and toggle switch.
by greenSkin: Hide toggle switch when JavaScript is disabled.
by greenSkin: Added support for ctools dropbutton as well as views styling for
  ctools dropbutton.
by greenSkin: Improved hash validation.
by greenSkin: Added ability for tabs to be disabled. Direct use case is when
  the "New" tab contains zero new modules.
by greenSkin: Added title to "New" tab link that helps to describe the criteria
  of a "new" module.


Module Filter 7.x-2.x, 2012-07-04
---------------------------------
#1320796 by greenSkin: Added some validation checks before trying to select a
  tab in case the tab does not actually exist.
#1429248 by klonos, greenSkin: Fixed Modules page table header overlaps
  admin_menu().
#1494694 by greenSkin: Added Let me decide if I want the cursor to focus on the
  search box or not.
#1515256 by catmat, greenSkin: Fixed Tabbed theme may remove functional
  content.
by greenSkin: Integrated dynamic positioning of the save button back in, but
  if the module page_actions is enabled we let it handle the save button. See
  issue #1424994.
by greenSkin: Clicking on module name now affects the toggle switch.