@@ -17,9 +17,9 @@ files[] = js/module_filter_tab.js
 
 configure = admin/config/user-interface/modulefilter
 
-; Information added by drupal.org packaging script on 2012-11-28
+; Information added by drupal.org packaging script on 2013-01-05
 version = "7.x-2.x-dev"
 core = "7.x"
 project = "module_filter"
-datestamp = "1354065407"
+datestamp = "1357349173"
 
